--- a/knowf/src/app/globals.css
+++ b/knowf/src/app/globals.css
@@ -1,21 +1,155 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+:root, .light, .light-theme {
+  --blue-1: #fdfdfe;
+  --blue-2: #f7f9ff;
+  --blue-3: #edf2ff;
+  --blue-4: #e0e9ff;
+  --blue-5: #d0deff;
+  --blue-6: #bed0ff;
+  --blue-7: #a8bdff;
+  --blue-8: #89a3f8;
+  --blue-9: #5067c4;
+  --blue-10: #4459b5;
+  --blue-11: #475db9;
+  --blue-12: #1f2b61;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --blue-a1: #00008002;
+  --blue-a2: #0040ff08;
+  --blue-a3: #0047ff12;
+  --blue-a4: #004bff1f;
+  --blue-a5: #004cff2f;
+  --blue-a6: #0047ff41;
+  --blue-a7: #003eff57;
+  --blue-a8: #0039f076;
+  --blue-a9: #0022a9af;
+  --blue-a10: #001d9abb;
+  --blue-a11: #001f9eb8;
+  --blue-a12: #000e4be0;
+
+  --blue-contrast: #fff;
+  --blue-surface: #f5f8ffcc;
+  --blue-indicator: #5067c4;
+  --blue-track: #5067c4;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+@supports (color: color(display-p3 1 1 1)) {
+  @media (color-gamut: p3) {
+    :root, .light, .light-theme {
+      --blue-1: oklch(99.4% 0.0017 270.4);
+      --blue-2: oklch(98.3% 0.009 270.4);
+      --blue-3: oklch(96.1% 0.0193 270.4);
+      --blue-4: oklch(93.5% 0.038 270.4);
+      --blue-5: oklch(90.3% 0.0575 270.4);
+      --blue-6: oklch(86.3% 0.0802 270.4);
+      --blue-7: oklch(80.7% 0.0976 270.4);
+      --blue-8: oklch(73% 0.1273 270.4);
+      --blue-9: oklch(54.4% 0.1464 270.4);
+      --blue-10: oklch(49.7% 0.1464 270.4);
+      --blue-11: oklch(51% 0.1464 270.4);
+      --blue-12: oklch(31.3% 0.0962 270.4);
+
+      --blue-a1: color(display-p3 0.0196 0.0196 0.5098 / 0.008);
+      --blue-a2: color(display-p3 0.0196 0.2667 0.8784 / 0.032);
+      --blue-a3: color(display-p3 0.0078 0.2392 0.9451 / 0.067);
+      --blue-a4: color(display-p3 0.0039 0.2471 0.9333 / 0.114);
+      --blue-a5: color(display-p3 0.0039 0.2549 0.9333 / 0.173);
+      --blue-a6: color(display-p3 0.0039 0.2314 0.9373 / 0.244);
+      --blue-a7: color(display-p3 0.0039 0.1961 0.9412 / 0.326);
+      --blue-a8: color(display-p3 0.0039 0.1804 0.8863 / 0.444);
+      --blue-a9: color(display-p3 0 0.102 0.6196 / 0.667);
+      --blue-a10: color(display-p3 0 0.0863 0.5647 / 0.718);
+      --blue-a11: color(display-p3 0 0.0941 0.5804 / 0.706);
+      --blue-a12: color(display-p3 0 0.0471 0.2745 / 0.871);
+
+      --blue-contrast: #fff;
+      --blue-surface: color(display-p3 0.9608 0.9725 1 / 0.8);
+      --blue-indicator: oklch(54.4% 0.1464 270.4);
+      --blue-track: oklch(54.4% 0.1464 270.4);
+    }
   }
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+:root, .light, .light-theme {
+  --gray-1: #fdfdfd;
+  --gray-2: #f9f9f9;
+  --gray-3: #f0f0f0;
+  --gray-4: #e8e8e8;
+  --gray-5: #e1e1e1;
+  --gray-6: #d9d9d9;
+  --gray-7: #cecece;
+  --gray-8: #bbb;
+  --gray-9: #8d8d8d;
+  --gray-10: #828282;
+  --gray-11: #636363;
+  --gray-12: #202020;
+
+  --gray-a1: #00000002;
+  --gray-a2: #00000006;
+  --gray-a3: #0000000f;
+  --gray-a4: #00000017;
+  --gray-a5: #0000001e;
+  --gray-a6: #00000026;
+  --gray-a7: #00000031;
+  --gray-a8: #00000044;
+  --gray-a9: #00000072;
+  --gray-a10: #0000007d;
+  --gray-a11: #0000009c;
+  --gray-a12: #000000df;
+
+  --gray-contrast: #FFFFFF;
+  --gray-surface: #ffffffcc;
+  --gray-indicator: #8d8d8d;
+  --gray-track: #8d8d8d;
+}
+
+@supports (color: color(display-p3 1 1 1)) {
+  @media (color-gamut: p3) {
+    :root, .light, .light-theme {
+      --gray-1: oklch(99.3% 0 none);
+      --gray-2: oklch(98.3% 0 none);
+      --gray-3: oklch(95.6% 0 none);
+      --gray-4: oklch(93.2% 0 none);
+      --gray-5: oklch(91% 0 none);
+      --gray-6: oklch(88.6% 0 none);
+      --gray-7: oklch(85.3% 0 none);
+      --gray-8: oklch(79.2% 0 none);
+      --gray-9: oklch(64.3% 0 none);
+      --gray-10: oklch(60.7% 0 none);
+      --gray-11: oklch(50% 0 none);
+      --gray-12: oklch(24.4% 0 none);
+
+      --gray-a1: color(display-p3 0 0 0 / 0.0078);
+      --gray-a2: color(display-p3 0 0 0 / 0.0235);
+      --gray-a3: color(display-p3 0 0 0 / 0.0588);
+      --gray-a4: color(display-p3 0 0 0 / 0.0902);
+      --gray-a5: color(display-p3 0 0 0 / 0.1176);
+      --gray-a6: color(display-p3 0 0 0 / 0.149);
+      --gray-a7: color(display-p3 0 0 0 / 0.1922);
+      --gray-a8: color(display-p3 0 0 0 / 0.2667);
+      --gray-a9: color(display-p3 0 0 0 / 0.4471);
+      --gray-a10: color(display-p3 0 0 0 / 0.4902);
+      --gray-a11: color(display-p3 0 0 0 / 0.6118);
+      --gray-a12: color(display-p3 0 0 0 / 0.8745);
+
+      --gray-contrast: #FFFFFF;
+      --gray-surface: color(display-p3 1 1 1 / 80%);
+      --gray-indicator: oklch(64.3% 0 none);
+      --gray-track: oklch(64.3% 0 none);
+    }
+  }
+}
+
+:root, .light, .light-theme, .radix-themes {
+  --color-background: #fff;
+}
+
+.radix-themes {
+	--default-font-family: var(--font-inter);
+}
+
+html, body {
+  margin: 0;
+  padding: 0;
+  width: 100vw; /* Full viewport width */
+  height: 100vh; /* Full viewport height */
+  overflow: hidden; /* Prevent scrolling */
 }
